--- a/measure/ch1.tex
+++ b/measure/ch1.tex
@@ -1,7 +1,7 @@
 \documentclass[main.tex]{subfiles}
 \usepackage{tikz-cd}
 \begin{document}
-\chapter{Measure Theory and Integration} 
+\chapter*{Measure Theory and Integration} 
 \section{Measuring Sets}
 
 First we define a rudimentary "\emph{measure}" for a rectangle. Then, by means of cube coverings of sets, we define a rudimentary measure for arbitrary sets in $\RR^d$, called the \emph{outer measure}, and results that follow, reg. open sets etc. leads us to define a restriction on the \emph{outer measure}, and this gives us the \emph{Lebesgue Measure}.
@@ -50,7 +50,7 @@ For the other direction, we start with a rectangle covering $\{R_i\}$ of $E$, an
 \\\\ (2) follows from the definition. }
 \thmp{\textbf{(Countable sub-additivity of outer measure)} Let $E=\cup_{i=1}^{\infty} E_i$. Then $M_*(E)\leq \sum_{i=1}^{\infty}M_*(E_i)$}{Let $\{Q_{i,j}\}_{i=1}^{\infty}$ be a closed almost disjoint cube covering for $E_j$ such that $\sum_{j=1}^{\infty}|Q_{ij}|\leq m_*(E_j)+\varepsilon/2^j$. $\{Q_{ij}:i,j \in \NN\}$ is a covering for $E$ implying $m_*(E)\leq \sum_{i=1}^{\infty}\sum_{j=1}^{\infty}|Q_{ij}| \leq \sum_{j=1}^{\infty}m_*(E_j)+\varepsilon$ which implies that $m_*(E)\leq \sum_{i=1}^{\infty} m_*(E_j)$ }
 
-\thmp{\textbf{(Open Set criteria)} $$m_*(E)=\inf(P)=\inf\{m_*(\OO):\OO \text{ open and }E \subseteq \OO\}$$}{From monotonicity, it is clear that $M_*(E)\leq\inf(P)$. Let $\{Q_i\}$ be such that $\sum_{i=1}^{\infty} \leq M_*(E)+\varepsilon/2$ and for each $Q_i$ find open cube $S_i$ so that $|S_i|\leq |Q_i|+\varepsilon/2^{i+1}$. Then $\sum_i |S_i| \leq \sum_i |Q_i| +\varepsilon/2$. Note that $\{S_i\}$ is an open cover for $E$, so let $O=\cup_i S_i$. We have $M_*(O) \leq \sum_{i}|S_i| \leq M_*(E)+\varepsilon$. We are done.   }
+\thmp{\textbf{(Open Set criteria)} $$m_*(E)=\inf(P)=\inf\{m_*(\OO):\OO \text{ open and }E \subseteq \OO\}$$}{From monotonicity, it is clear that $M_*(E)\leq\inf(P)$. Let $\{Q_i\}$ be such that $\sum_{i=1}^{\infty}|Q_i| \leq M_*(E)+\varepsilon/2$ and for each $Q_i$ find open cube $S_i$ so that $|S_i|\leq |Q_i|+\varepsilon/2^{i+1}$. Then $\sum_i |S_i| \leq \sum_i |Q_i| +\varepsilon/2$. Note that $\{S_i\}$ is an open cover for $E$, so let $O=\cup_i S_i$. We have $M_*(O) \leq \sum_{i}|S_i| \leq M_*(E)+\varepsilon$. We are done.   }
 \thmp{If $E=E_1 \cup E_2$ with $d(E_1,E_2)>0$ and $E_1 \cap E_2=\varnothing$, then $M_*(E)=M_*(E_1)+M_*(E_2)$}{From countable additivity we have $m_*(E)\leq m_*(E_1)+m_*(E_2)$. For the other direction, take an open covering $\{Q_i\}$ for $E$ such that $\sum_i |Q_i| \leq m_*(E)+\varepsilon$. We subdivide each $Q_i$ into $Q_{ij}$ (a finite number of them for each i) such that each cube is of side length less than $d(E_1,E_2)$. This means that a subcollection of $Q_{ij}$ covers $E_1$, and another, disjoint subcollection covers $E_2$, which means that $m_*(E_1)+m_*(E_2)\leq \sum_{ij} |Q_ij|\leq m_*(E)+\varepsilon$. We are done. 
 
 }
@@ -147,12 +147,14 @@ Using similar techniques, one can show:
 \end{enumerate}}{If measurable, then obviously we have for every $n \in \NN$ such that $m(O_n-E)\leq 1/n$ so $\cap_n O_n$ is our desired $G_{\delta}$ set. Likewise, if we perform the same for $E^c$ and get $\cap_n O'_n$ there, then $\cup_n O'^c_n$ is our desired $F_{\sigma} $ set. 
 \\\\ If we have $E$ differ from a $G_{\delta}$ set by a set of measure 0, we mean that $E-G$ and $G-E$ are individually measure 0. Note that $E\cap G=G-(G-E)$ which means $E \cap G$ is measurable. Now, $E \cap G \cup (E-G)=E$, which means $E$ is measurable. Same argument applies to an $F_{\sigma}$ set $F$. }
 
+\thmp{(\textbf{An equivalent formultion of measurability}) Let $E$ be measurable and $E_0 \subseteq E$. If $m^*(E)=m^*(E_0)+m^*(E-E_0)$ then $E_0$ is measurable and naturally, so is $E-E_0$. The converse statement is obviously true.}{Consider $E\subset O$ such that $m(O-E)\leq \varepsilon$. Let $O_1$ and $O_2 $ be so that $m^*(O_1)\leq m^*(E_0)+\varepsilon$ and $m^*(O_2)\leq m^*(E-E_O)+\varepsilon$. $E_0\subseteq O_1$, $E-E_O\subseteq O_2$. $$m^*(E_0)+m^*(E-E_0)=m^*(E)\leq m^*(O_1 \cup O_2)=m^*(O_1)+m^*(O_2)-m^*(O_1\cap O_2) $$ which yields $m^*(O_1 \cap O_2) \leq 2\varepsilon$. Note that $O_1-E_0\subseteq (O_1 \cap O_2) \cup ((O_1 \cup O_2)-E)$ which gives $$m^*(O_1-E_0)\leq m^*(O_1\cap O_2)+m^*(O-E)$$ which are each dominated by some factor of $\varepsilon$. Hence, $E_0$ is measurable. }
+
 \subsection{A non measurable set in $[0,1]$}
 Define the equivalence relation $x \sim y$ if and only if $x-y \in \QQ$. Let $\epsilon_{\alpha}$ be the equivalence classes, so that $[0,1]=\cup_{\alpha} \epsilon_{\alpha}$. Pick $x_{\alpha}\in \epsilon_{\alpha}$ (by axiom of choice). Take these $x_{\alpha}$ to make a set $\N$.
 \\\\ Let $\{r_k\}$ be an enumeration of rationals in $[-1,1]$. Define $N_k=N+r_k$ (translate). Note that, if $N_l\cap N_k\neq \varnothing$, then $N+r_l\cap N+r_k \neq \varnothing$ or there exists $x=x_{\alpha}+r_l=x_{\beta}+r_k$, but that means $x_{\alpha}\sim x_{\beta}$, only possible if $\alpha=\beta$ but contradiction to the assumption that $l \neq k$, so for different rationals, $N_k$ is disjoint to $N_j$. Note that $[0,1]\subseteq \cup_{i=1}^{\infty}N_i \subseteq [-1,2]$. Assuming $N$ is measurable, it tells us $N_k $ each are measurable, and yields $1 \leq \sum_{i=1}^{\infty} m(N_i)\leq 4$ but $m(N_k)=m(N)$, which gives us a contradiction. 
 \\\\ This set is called the \textbf{Vitali Set}. 
 
-\section{Measuring Functions}
+\section{Measurable Functions}
 \defn{Measurable Function}{A function $f:\RR^d \to \RR\cup \{-\infty,\infty\}$ is said to be \emph{measurable} if $f^{-1}([-\infty,a))$ is measurable in $\RR^d$.}
 \begin{remark}
     Note that, in the above definition, it is easy to see that it is equivalent to saying any function is Lebesgue measurable if it inverse maps borel sets to lebesgue sets. 
@@ -279,8 +281,28 @@ Let $G_N=E-F_N$, our set of consideration for a given $\varepsilon$. We then hav
 \lemp{\textbf{(Throwaway)} If $f_n:(X,d)\to \RR$ is a sequence of continuous functions such that $f_n \to f$ uniformly, then $f$ is continuous.}{Let $x\in X$ and $\varepsilon>$. We want a $\delta>0$ such that $|f(x)-f(z)|<\varepsilon$ whenever $z \in B_{\delta}(x)$. Note that $|f_n(x)-f(x)|<\varepsilon/3$ and $|f_n(z)-f(z)|<\varepsilon/3$ whenever $n \geq N_{\varepsilon}$, and there is a $\delta_0$ so that $|f_n(x)-f_n(z)|<\varepsilon/3$ whenever $z\in B_{\delta}(x)$. Consider $|f(x)-f(z)|=|f(x)-f_n(x)+f_n(x)-f_n(z)+f_n(z)-f(z)|\leq |f_n(x)-f(x)|+|f_n(x)-f_n(z)|+|f_n(z)-f(z)|\leq \varepsilon$ whenever $n \geq N_{\varepsilon}$, and $z \in B_{\delta}(x)$. We have found our $\delta$. Hence, $f$ is continuous. }
 \lemp{(\textbf{Borel-Cantelli Lemma}) Let $E_1,E_2,\cdots $ be a collection of measurable sets such that $$\sum_{i=1}^{\infty}m(E_i)<\infty $$ then $\limsup(E_i):=\cap_{n \in \NN}\cup_{i\geq n}E_i$ is measurable and is of measure 0.}{We know that $m(E_i)\to 0$ from convergence of the series. Since the series converges, we can make $\sum_{i=N+1}^{\infty} m(E_i)$ arbitrarily small for large enough $N$. Therefore, for a given $\varepsilon, $ there exists $N$ such that $$m(\cup_{i=N+1}^{\infty}E_i)\leq \sum_{i=N+1}^{\infty}m(E_i)\leq \varepsilon $$
 Since the $\limsup$ is smaller than the left side above for every $N$, we have that $m(\limsup(E_i))=0$.}
+\subsection{Miscellaneous Theorems}
+\thmp{Let $E\subseteq \RR^d$ and $O_n$ be the open set $$O_n=\{x\in\RR^d: d(x,E)<1/n\} $$ If $E$ were compact, then $$\lim_{n\to \infty} m(O_n)=m(E) $$ But there exists counter examples when:\begin{enumerate}
+    \item $E$ is closed and unbounded
+    \item $E$ is open and bounded
+\end{enumerate} }{Note that $O_{n+1}\subseteq O_n \cdots $ a decreasing sequence. If $E$ were compact, all these sets have finite measure. So, $$m(\cap_n O_n)=\lim_{n\to\infty}m(O_n)$$ But note that $\cap_n O_n=\{x: d(x,E)=0\}$ which is $cls(E)$, which is in this case $E $ itself. Therefore, $$\lim_{n\to\infty}m(O_n)=m(E) $$
+For the counter examples:
+\begin{enumerate}
+    \item Consider $\RR\subseteq \RR^2$, whose closure is itself. Note that $m(R)=0$ in $\RR^2$. But $O_n:=\{x:d(x,\RR)<1/n\}$ is an open set (its a strip) whose measure is $\infty$. This is true for all $O_n$, so $\lim_{n\to\infty}m(O_n)=\infty$ but $m(\RR)=0$.
+    \item For the 2nd counter example: Let $\hat{C}$ be the fat cantor set, i.e, the cantor set created by removing intervals of size $l_0,l_1\cdots$ such that $1-(l_0+2l_1+2^2l_2 \cdots)>0$. Consider the union of all the deleted neighbourhoods. Note that, the fat cantor set is perfect, i.e, every point of $\hat{C}$ is a limit point of $\hat{C}$, so for $x\in\hat{C}$ there exists a monotonic sequence $x_n\in \hat{C}$ that converges to $x \in \hat{C}$. We also know $\hat{C}$ is totally disconnected, so between any two elements of $\hat{C}$, there is an element of $\hat{C}^c$, which is an element of the union of the deleted intervals. Hence, every element of $\hat{C}$ is a limit point of the union of the deleted neighbourhoods. Let $U$ denote this union of all deleted neighbourhoods at each step. We note that $cls(U)=[0,1]$. $m(cls(U))=m(\cap_n O_n)=1$, but $m(U)<1$ (because fat cantor set is of finite measure).  
+\end{enumerate}}
+\begin{example}
+    (\textbf{There exists a sequence of decreasing, continuous functions whose pointwise limit is not Riemann integrable}) Let $\hat C$ denote the fat cantor set. Consider $F_0$ to be $1$ on all of $[0,1]$. Let $F_1$ to be $1$ on $C_1$ (2 intervals each of size $1-l_0/2$), $0$ at the centre of the deleted neighbourhood, and linear, connecting $0$ and $1$ on the deleted neighbourhood. Likewise, make $F_2$ so that it is $1$ on $C_2$, and $0$ on the centres of each deleted neighbourhoods, and is linear on these deleted neighbourhoods. We then define $f_n=F_1 \cdot F_2 \cdot F_n$, which is a sequence of decreasing functions. Note that, if $x \in \hat C$, there exists large enough $n$ such that $f_n=1$ on $x$. Therefore, on $\hat C$, the pointwise limit (which exists since each function is bounded) is $1$. We note that $f$ is discontinuous at every point of $\hat{C}$, since there exists a sequence $x_n$ outside $\hat{C}$ such that $f(x_n)\to 0$. Since the set of discontinuities is unconutable, the function $f$ is not riemann integrable (See appendix). 
+\end{example}
+\thmp{Let $f_n$ be a sequence of functions on $[0,1]$ such that $$|f(x)|<\infty \ a.e.$$ then there exists a sequence $c_n$ of real numbers such that $$f_n/c_n \to 0 \ a.e.$$}{Consider $$E_n^k:=\{x\in[0,1]: |f_n(x)|>k/n\} $$ For increasing $k$ this sequence of sets is decreasing, and $\cap_k E_n^k=\{x:|f_n(x)|=\infty\}$. Also, $E_n^k$ are measurable and of finite measure since they're subsets of $[0,1]$. Hence, $\lim_{k\to\infty}m(E^k_n)=m(\cap_k E^k_n)=0$. This means that, for a given $j$, there exists $n_0$ such that $$m(E^k_n)<2^{-j} \ \forall \ k \geq n_0$$ or simply, there exists, for every $j$, a $k_j$ such that $$m(E^{k_j}_j)=m(\{x\in[0,1]:|f_j(x)/k_j|>1/j\})<2^{-j}$$ Which means $\sum_j m(E^{k_j}_j)<\infty$, which means from Borel-Cantelli, $$m(\limsup_j E^{k_j}_j)=m(\cap_{n\in\NN}(\cup_{i\geq n}E^{k_i}_i ))=m(\cap_{n\in\NN}(\cup_{i\geq n}\{x\in[0,1]: |f_i(x)/k_i|>1/i\}))=0 $$ This means that the set $R=\cup_{n\in\NN}(\cap_{i\geq n} \{x: |f_i(x)/k_i|\leq 1/i\}) $ is a set of full measure, whose complement is null. If $x$ is in $R$, $|f_i(x)/k_i|\to 0$ eventually. Thus, a.e. $$f_i(x)/k_i\to 0 \ a.e. $$ }
+\thmp{Every measurable function is an a.e. limit of a sequence of continuous functions.}{Let $f:\RR^d\to \RR\cup\{\pm \infty\}$ be a measurable function. Let $f_n$ be a sequence of step functions such that $$f_n\to f \ \text{pointwise }a.e. $$
+Look at $\chi_{R}$ for a rectangle $R$. In $1-d$, it is easy to construct a sequence of continuous functions that converge to $\chi_I$; Let $R=\Pi_{i=1}^d[a_i,b_i]$. For the 1-d case, say on $[a_i,b_i]$, we can construct the function: $$\phi_{i,n}(x):=\begin{cases}
+    0 \ :x \not \in [a_i-1/n,b_i+1/n] \\
+    1 \ :x \in [a_i,b_i] \\
+    n(x-a_i+1/n) \ :x \in [a_i-1/n,a_i]\\
+    -n(x-b_i-1/n)\ :x \in [b_i,b_i+1/n]
 
-
+\end{cases} $$ This function is continuous, and converges to $\chi_{[a_i,b_i]}$ pointwise, on the real line. Consider $f_n:\RR^d\to \RR\cup \{\pm \infty\}$ $f_n(x_1,x_2,\cdots x_d)=\Pi_{i=1}^d \phi_{i,n}(x_i)$. Does $f_n$ approximate $\chi_R$ well? Let $\vec{x}=(x_1,x_2,\cdots x_d) \in R$. That means $a_i\leq x_i\leq b_i$. Inside $R$, $\chi_R(x)=1$, which, of course, $f_n$ is. Outside $R$, $\chi_R$ is $0$. Let $\vec{x}=(x_1,x_2\cdots ,x_d) \in R^c$  }
 \section{Integration}
 \subsection{Simple Functions}
 \defn{Canonical form of a simple function}{We say $\phi$, a simple function, is in canonical form if $$ \phi=\sum_{i=1}^N a_i \chi_{E_i}$$ where $\{a_i\}$ are distinct constants and $\{E_i\}$ are disjoint. }
@@ -346,7 +368,7 @@ Since $f$ is measurable, $f^{-1}(\RR\cup\{\pm \infty\}-\{0\})$, or rather, the s
 \defn{(Alternate) Riemann Integrability}{We say a bounded function $f$ defined on $[a,b]$ is Riemann integrable if $$\sup_{P} \mathscr{U}(P,f)=\inf_{P} \mathscr{L}(P,f)$$}
 \thmp{These two definitions are equivalent}{$\implies)$ Let $f$ be Riemann Integrable in the sense that, given $\varepsilon>0$, there exists partition such that $\mathscr{L}(P,f)-\U(P,f)<\varepsilon$. Note that, for any refinement $P'$ of $P$, $\U(P,f)\leq U(P',f)$ and $\mathscr{L}(P',f)\leq \mathscr{L}(P,f)$. Also note that, given any two partitions $P_1$ and $P_2$, we have $$\mathscr{L}(P_2,f)\geq \mathscr{U}(P_1,f) $$ To see this, take a common refinement of $P_1$ and $P_2$, namely $P'$ such that $\mathscr{U}(P_1,f)\leq \mathscr{U}(P',f)$ and $\mathscr{L}(P',f)\leq \mathscr{L}(P_2,f)$. Together with $\U(P',f)\leq \mathscr{L}(P',f)$, we get the desired result.
 \\\\ Therefore, we have that $$\sup_{P}\mathscr{U}(P,f)\leq \inf_P \mathscr{L}(P,f)$$ Note that, the 1st definition intuitively speaks to how we can make the upper and lower sum arbitrarily close to each other, which speaks to the 2nd definition, which is that, the supremum and infimum resp. can be bought close together arbitrarily. Hence, the equality falls.
-\\\\ $\impliedby)$ 
+\\\\ $\impliedby)$ Let $\varepsilon>0$, consider $\sup_{P} \U(P,f)=\inf_{P}\mathscr{L}(P,f)<\sup_{P}\U(P,f) +\varepsilon$. This means  there exists some $P_0$ such that $\mathscr{L}(P_0,f)\leq \sup_{P}\U(P,f)+\varepsilon$ which then again gives $P_1$ such that $\mathscr{L}(P_0,f)\leq \U(P_1,f)+\varepsilon$. Since $\mathscr{L}$ is a decreasing function for increasing partitions (more finer partitions) and $\mathscr{U}$ is decreasing for finer partitions, we combine $P_0$ and $P_1$ to yield a finer partition $P'''$ such that $\mathscr{L}(P''',f)-\mathscr{U}(P''',f)<\varepsilon$. We are done.
 }
 
 \end{document}
